--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-mocks": "^1.5.0",
+    "angular-route": "^1.5.0",
     "angular-ui-router": "^0.2.13",
     "jasmine-core": "^2.2.0",
     "jasmine-jquery": "^2.0.6",
