--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
     "angular-mocks": "^1.5.0",
     "angular-route": "^1.5.0",
     "angular-ui-router": "^0.2.13",
