--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "1.5.0",
   "description": "Internal Systematic course",
   "main": "index.js",
+  "prettier": {
+    "printWidth": 90,
+    "singleQuote": true
+  },
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-animate": "^1.5.0",
-    "angular-mocks": "^1.5.0",
-    "angular-route": "^1.5.0",
+    "angular": "^1.6.0",
+    "angular-animate": "^1.6.6",
+    "angular-mocks": "^1.6.6",
+    "angular-route": "^1.6.6",
     "angular-ui-router": "^0.2.13",
-    "jasmine-core": "^2.2.0",
-    "jasmine-jquery": "^2.0.6",
+    "jasmine-core": "^2.8.0",
+    "jasmine-jquery": "^2.1.1",
     "jquery": "^2.1.3",
-    "karma": "^0.13.21",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "karma": "^1.7.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4"
   },
   "devDependencies": {
     "serve": "^1.4.0"
